--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser": "8.0.2",
     "@angular/platform-browser-dynamic": "8.0.2",
     "@angular/router": "8.0.2",
+    "angularfire2": "^5.2.1",
     "core-js": "2.6.9",
     "hammerjs": "2.0.8",
     "rxjs": "6.5.2",
