--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/router": "8.0.2",
     "angularfire2": "^5.2.1",
     "core-js": "2.6.9",
+    "firebase": "^6.2.2",
     "hammerjs": "2.0.8",
     "rxjs": "6.5.2",
     "rxjs-compat": "^6.5.2",
