--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "@angular/common": "8.0.2",
     "@angular/compiler": "8.0.2",
     "@angular/core": "8.0.2",
+    "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "8.0.0-beta.26",
     "@angular/forms": "8.0.2",
     "@angular/material": "8.0.1",
     "@angular/platform-browser": "8.0.2",
     "@angular/platform-browser-dynamic": "8.0.2",
     "@angular/router": "8.0.2",
-    "angularfire2": "^5.2.1",
+    "@firebase/util": "^0.2.20",
+    "angularfire2": "5.2.1",
     "core-js": "2.6.9",
-    "firebase": "^6.2.2",
+    "firebase": "6.2.2",
     "hammerjs": "2.0.8",
     "rxjs": "6.5.2",
-    "rxjs-compat": "^6.5.2",
+    "rxjs-compat": "6.5.2",
     "zone.js": "0.9.1"
   },
   "scripts": {
